# ChaosEngineCPP

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChaosEngine.cpp  ChaosEngine.h  ChaosException.cpp  Common.cpp  LICENSE  LICENSE.txt  NewGame.cpp  README.md  chaos_engine.cpp  chaos_engine.h  chat.cpp  debug.cpp  dev-blogs.txt  dev_note.txt  es.cpp  main.cpp  test.cpp
ChaosEngine/: Base.cpp  ChaosEngine.cpp  ChaosEngine.h  Common.cpp  Common.h  Definitions.cpp  Device.cpp  DirectX.cpp  Engine.cpp  Engine.h  EngineX.cpp  EngineX.h  GraphicX.cpp  IGraphic.cpp  IGraphic.h  Memory.h  Model.cpp  Model.h  PhysicX.cpp  PhysicXEngine.cpp  PhysicXEngine.h  Pointer.cpp  Properties.cpp  Property.cpp  Property.h  Resource.cpp  Stage.cpp  Stage.h  Structure.cpp  System.cpp  Type.h  Utils.h  WindowX.cpp  WindowX.h  _DirectX_D3D.cpp  __PhysicX__.cpp  basic_type.h
ChaosEngine/Audio/: AudioManager.cpp  AudioPlayer.cpp  Channel.cpp  ChannelGroup.cpp  Sample.cpp  Sound.cpp
ChaosEngine/AudioX/: AudioManager.cpp  AudioPlayer.cpp  AudioX.h  Channel.cpp  ChannelGroup.cpp  Sample.cpp  Sound.cpp
ChaosEngine/Class/: Class.h  System.h
ChaosEngine/Content/: Actor.cpp  Scene.cpp  Stage.cpp
ChaosEngine/Device/: Engine.cpp  Engine.h  Window.cpp  WindowManager.cpp
ChaosEngine/GameObject/: Actor.cpp  GameObject.h
ChaosEngine/Graphic/: Bitmap.cpp  GraphicManager.cpp  Renderer.cpp  Texture.cpp  Viewport.cpp
ChaosEngine/GraphicX/: GraphicManager.cpp  GraphicX.h  RenderTaskParam.cpp  Renderer.cpp  Texture.cpp  Viewport.cpp
ChaosEngine/InternalDevice/: Engine.cpp  InternalDevice.h  Scene.cpp  Stage.cpp
ChaosEngine/Object/: Timer.cpp
ChaosEngine/ObjectList/: ObjectList.h
ChaosEngine/PhysicsEngine/: Common_PhysicsEngine.cpp  Common_PhysicsEngine.h  GeoBox.cpp  GeoBox.h  PhysicalSpace.cpp  PhysicalSpace.h
ChaosEngine/Source/: Base.cpp  Device.cpp  Resource.cpp  Source.cpp  System.cpp
ChaosEngine/WindowX/: Hotkey.cpp  KeyStateBuffer.cpp  Window.cpp  WindowManager.cpp  WindowProperty.cpp  WindowX.h
ChaosEngine/__remove/: ChaosEngine (2).h  EaseFunc (2).cpp  EaseFunc (2).h  Engine (2).cpp  EngineX (2).cpp  RuntimeProperty.cpp  RuntimeProperty.h  WindowX (2).cpp  test.cpp
ChaosEngine/headers/: DirectX.h  EngineX.h  GraphicX.h  PhysicX.h  Properties.h  Property.h  Stage.h  Type.h  Utils.h  WindowX.h
ChaosEngine/lib/: fmodstudio_vc_86.lib  fmodstudio_vc_x64.lib
ChaosEngine/res/: CompList.cpp  CompList.h  ManagerList.cpp  ManagerList.h  ModelList.h  ObjectList.cpp  ObjectList.h  ResList.cpp  ResList.h  TypeList.cpp  TypeList.h
Designs/: dev-blogs.txt  initial design blueprint.prg
Docs/: Renderer.md  Window.md
Docs/RenderTaskType/: Ellipse.md  Line.md  Rectangle.md  Texture.md
GameExamples/GameExample-1/: CMakeLists.txt  debug.cpp
NewGame/: CMakeLists.txt  ChaosEngine.lib  DebugScene.cpp  DebugScene.h  MainScene.cpp  MainScene.h  NewGame.cpp  NewGame.h
NewGame_EnglishPracticer/: CMakeLists.txt  CMakeSettings.json  DebugScene.cpp  DebugScene.h  MainScene.cpp  MainScene.h  NewGame.cpp  NewGame.h  SceneList.h
NewGame_PhysicXObject/: CMakeLists.txt  DebugScene.cpp  DebugScene.h  MainScene.cpp  MainScene.h  NewGame.cpp  NewGame.h
NewGame_Template/: CMakeSettings.json  MainScene.cpp  MainScene.h  NewGame.cpp  NewGame.h
_huge_ue/: Actor.cpp  Actor.h
_include/: ChaosEngine.h
_resource/: ResList.h
_resource/component/: Animation.cpp  Animation.h  EaseFunc.cpp  EaseFunc.h  Timer.cpp  __ExampleComp.h  _list.cpp
_resource/model/: CompModel.h  ObjectModel.h  SceneModel.h
_resource/object/: Image.h  __ExampleObject.cpp  _list.h
_resource/type/: Camera.h  TextFormat.cpp  Texture.h  VirtKeyStateBuffer.cpp  __ExampleProperty.cpp  _list.cpp  _list.h
_src/: GraphicX.cpp
_src/demo/: VirtKeyStateBuffer.cpp  VirtKeyStateBuffer.h
basic_chaos_engine/: basic_common.cpp  basic_common.h  basic_graphic.cpp  basic_graphic.h  basic_type.h  basic_window.cpp  basic_window.h  basic_window_win.cpp  basic_window_win.h  common.h  common_basic.cpp  common_basic.h
chaos_engine/: Engine.cpp  common.h
chaos_engine/physics_engine/: CollisionBox.cpp  CollisionBox.h  PhysicsEngine.cpp  PhysicsEngine.h  common_physics_engine.cpp  common_physics_engine.h
include/: ChaosEngine.h  Engine.h  Type.h  Window.h  common.h  engine.h  window.h
libraries/: fftw3.lib
resource/: ResList.cpp  ResList.h
resource/component/: Animation.cpp  EaseFunc.cpp  EaseFunc.h  Timer.cpp  __ExampleComp.cpp  __ExampleComp.h
resource/manager/: TextureManager.cpp  (+1 more)
src/: ChaosEngine.cpp  DirectX.cpp  Engine.cpp  Window.cpp  WindowX.cpp  common.cpp  engine.cpp  window.cpp
(+212 files in other folders)
